force-app/main/default/src/objects/PJN_Mapping_Date_Formula__mdt/PJN_Mapping_Date_Formula__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Mapping Engine
Purpose: Define date field value and target field for a Date Formula Mapping type. This is step 4 in setting up the mapping engine for case-related mapping.
Metadata Relationship(s): Mapping
Created by Mavens: Yes</description>
    <label>Mapping Date Formula</label>
    <pluralLabel>Mapping Date Formulas</pluralLabel>
</CustomObject>