force-app/main/default/src/objects/PJN_Mapping_Date_Formula__mdt/fields/PJN_Days_To_Add__c.field-meta.xml
<CustomField>
    <fullName>PJN_Days_To_Add__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days To Add</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>