force-app/main/default/src/objects/PJN_Mapping_Date_Formula__mdt/fields/PJN_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Formula__c</fullName>
    <label>Formula</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOW</fullName>
                <default>true</default>
                <label>NOW</label>
            </value>
            <value>
                <fullName>TODAY</fullName>
            </value>
            <value>
                <fullName>FIELD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>