force-app/main/default/src/objects/PJN_Mapping_Date_Formula__mdt/fields/PJN_Mapping__c.field-meta.xml
<CustomField>
    <fullName>PJN_Mapping__c</fullName>
    <label>Mapping</label>
    <referenceTo>PJN_Mapping__mdt</referenceTo>
    <relationshipLabel>Mapping Date Formulas</relationshipLabel>
    <relationshipName>PJN_Mapping_Date_Formulas</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>