force-app/main/default/src/objects/PJN_Mapping_Date_Formula__mdt/listViews/PJN_All_Mapping_Date_Formulas.listView-meta.xml
<ListView>
    <fullName>PJN_All_Mapping_Date_Formulas</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Mapping__c</columns>
    <columns>PJN_Target_Field_API_Name__c</columns>
    <columns>PJN_Formula__c</columns>
    <columns>PJN_Days_To_Add__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mapping Date Formulas</label>
    <language>en_US</language>
</ListView>